<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wireless Quote</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login String List-->
    <string name="username_login"></string>
    <string name="password_login"></string>
    <string name="login_button">Log In</string>
    <string name="incorrect_info">Information Incorrect, try again</string>

    <!--Manage Quote-->
    <string name="manage_quote_employee_button">Manage Quote</string>

    <!--Create Quote-->
    <string name="create_quote_button">Create New Quote</string>

    <!--Customer Information-->
    <string name="new_customer_username"></string>
    <string name="new_customer_password"></string>
    <string name="new_customer_first_name"></string>
    <string name="new_customer_last_name"></string>
    <string name="new_customer_middlei"></string>
    <string name="new_company_name"></string>
    <string name="new_company_address"></string>
    <string name="next_customer_information">Next</string>

    <!--Building Information-->
    <string name="new_customer_buildings"></string>
    <string name="new_customer_units"></string>
    <string name="new_customer_rooms"></string>
    <string name="new_customer_floors"></string>
    <string name="next_building_information">Next</string>
    <string name="previous_building_information">Previous</string>

    <!--Equipment Page-->
    <string name="previous_equipment_information">Previous</string>
    <string name="save_equipment_information">Save</string>
    <string name="equipment_text">Pick the Appropriate Equipment</string>

    <!--Employee Manage Quote -->
    <string name="employee_enter_username"></string>
    <string name="employee_view_button">View Quote</string>
    <string name="employee_edit_button">Edit Quote</string>
    <string name="employee_removeC_button">Remove Customer</string>
    <string name="employee_removeQ_button">Remove Quote</string>
    <string name="employee_logoff_button">Log Off</string>
    <string name="log_off">Good Bye!</string>

    <!--Customer Manage Quote -->
    <string name="customer_view_button">View Quote</string>
    <string name="customer_edit_button">Edit Quote</string>
    <string name="customer_enter_username"></string>
    <string name="customer_logoff_button">Log Off</string>

    <!--Remove Customer-->
    <string name="remove_username"></string>
    <string name="remove_button">Remove Customer</string>
    <string name="cust_r">Customer Removed</string>

    <!--View Quote-->
    <string name="view_email_button">Email Quote</string>

    <!--Edit Quote-->
    <string name="edit_email_button">Email Quote</string>
    <string name="edit_submit_button">Submit Changes</string>

    <!--Remove Quote-->
    <string name="remove_quote_username"></string>
    <string name="remove_quote_button">Remove Quote</string>
    <string name="cust_q">Quote Removed</string>
    <string name="not_found">User not found, try again</string>

    <!--Email Quote-->
    <string name="email_address"></string>
    <string name="send_button">Send Quote</string>
    <string name="title_activity_splash">Splash</string>
    <string name="info_saved">Information Updated</string>
    <string name="email_subject"></string>
    <string name="email_sent">Your Email Was Sent</string>

</resources>
