<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/new_username"
        android:hint="Customer Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24dp"
        android:gravity="center"
        android:text="@string/new_customer_username"/>

    <EditText
        android:id="@+id/new_password"
        android:hint="Customer Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/new_customer_password"/>

    <EditText
        android:id="@+id/new_customer_first_name"
        android:hint="Customer First Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/new_customer_first_name"/>

    <EditText
        android:id="@+id/new_customer_last_name"
        android:hint="Customer Last Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/new_customer_last_name"/>

    <EditText
        android:id="@+id/new_customer_middle"
        android:hint="Customer Middle Initial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/new_customer_middlei"/>

    <EditText
        android:id="@+id/new_company_name"
        android:hint="Company Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/new_company_name"/>

    <EditText
        android:id="@+id/new_company_address"
        android:hint="Comapny Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="24dp"
        android:text="@string/new_company_address"/>

    <Button
        android:id="@+id/next_button_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_customer_information"
        android:onClick="next"/>
</LinearLayout>
