<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/employee_enter_user"
            android:hint="Customer Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="24sp"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/employee_enter_username"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

        <Button
            android:id="@+id/employee_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_edit_button"/>

        <Button
            android:id="@+id/employee_view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee_view_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/employee_removeC_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employee_removeC_button"
                android:onClick="Remove Customer"/>

            <Button
                android:id="@+id/employee_removeQ_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employee_removeQ_button"
                android:onClick="Remove Quote"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/employee_logoff_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_logoff_button"
        android:onClick="Log Off"/>
</LinearLayout>
