<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/email_address"
        android:hint="Enter Email Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="24sp"
        android:text="@string/email_address"/>

    <EditText
        android:id="@+id/email_subject"
        android:hint="Enter Email Subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="24sp"
        android:text="@string/email_subject"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button"/>
</LinearLayout>
