<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username_login"
        android:hint="Username"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="24sp"
        android:singleLine="true"
        android:gravity="center"
        android:text="@string/username_login"/>

    <EditText
        android:id="@+id/password_login"
        android:hint="Password"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="true"
        android:padding="10dp"
        android:textSize="24sp"
        android:text="@string/password_login"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:onClick="login"/>
</LinearLayout>
