<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/customer_enter_user"
            android:hint="Enter Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="24sp"
            android:singleLine="true"
            android:gravity="center"
            android:text="@string/customer_enter_username"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/customer_edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_edit_button"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/customer_view_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_view_button"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/customer_logoff_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_logoff_button"
        android:onClick="Log Off"/>
</LinearLayout>
